# discord-chatbot

./: .env.example  bot.py  pyproject.toml
core/: llm.py  prompt.py  util.py
