[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["subhamk <subhamkhadanga97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"
python-dotenv = "^1.0.0"
litellm = "^0.1.690"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
